# createpy

./: .gitignore  README.md  createpy.py  main.py  pyproject.toml
.github/workflows/: build-release.yaml  release.yaml
src/createpy/: cli.py  errors.py  tools.py  validators.py
tests/: test_tools.py  test_validators.py
