[project]
name = "createpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.uv.workspace]
members = [
    "test",
    "dist/test",
]

[project.scripts]
createpy = "createpy.cli:app"
